// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRemoteIcon renders alpine correctly 1`] = `
<div>
  <img
    alt="alpine logo"
    height={24}
    src="/alpine_logo.svg"
    width={24}
  />
</div>
`;

exports[`getRemoteIcon renders generic correctly 1`] = `
<div>
  <svg
    role="presentation"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    viewBox="0 0 24 24"
  >
    <path
      d="M4,1H20A1,1 0 0,1 21,2V6A1,1 0 0,1 20,7H4A1,1 0 0,1 3,6V2A1,1 0 0,1 4,1M4,9H20A1,1 0 0,1 21,10V14A1,1 0 0,1 20,15H4A1,1 0 0,1 3,14V10A1,1 0 0,1 4,9M4,17H20A1,1 0 0,1 21,18V22A1,1 0 0,1 20,23H4A1,1 0 0,1 3,22V18A1,1 0 0,1 4,17M9,5H10V3H9V5M9,13H10V11H9V13M9,21H10V19H9V21M5,3V5H7V3H5M5,11V13H7V11H5M5,19V21H7V19H5Z"
      style={
        Object {
          "fill": "rgba(0, 0, 0, 0.54)",
        }
      }
    />
  </svg>
</div>
`;

exports[`getRemoteIcon renders maven correctly 1`] = `
<div>
  <img
    alt="maven logo"
    height={24}
    src="/maven_logo.svg"
    width={24}
  />
</div>
`;

exports[`getRemoteIcon renders node correctly 1`] = `
<div>
  <img
    alt="node logo"
    height={24}
    src="/node_logo.svg"
    width={24}
  />
</div>
`;
